fix: Scrollbar modal for Firefox (#1259)

--- a/src/app/cdk/modal/modal/modal.component.scss
+++ b/src/app/cdk/modal/modal/modal.component.scss
@@ -27,6 +27,7 @@
   .main-area {
     flex-shrink: 1;
     overflow: hidden;
+    height: 100%;
   }
   .footer-area,
   header-area {
